meilleures commandes dans le ant: voir le readme